--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(17, 17, 17);
+    background-color: #15161d;
     color: white;
     font-family: 'Source Sans Pro', sans-serif;
 }
