--- a/public/style.css
+++ b/public/style.css
@@ -15,33 +15,8 @@ body {
     font-weight: 600;
 }
 
-.header {
-    font-size: 16px;
-    padding: 30px;
-    padding-left: 13vw;
-    padding-right: 13vw;
-    line-height: 4px;
-}
 
-.container-area {
-    padding-left: 13vw;
-    padding-right: 13vw;
-}
 
-.container {
-    height: 55vh;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-}
-
-.container h1 {
-    letter-spacing: -1px;
-    font-size: 46px;
-    font-weight: 300;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
 
 .container .p {
     font-weight: 600;
@@ -49,40 +24,7 @@ body {
     color: rgba(255, 255, 255, .8);
 }
 
-.top {
-    width: 100%;
-    padding: 60px;
-    padding-top: 50px;
-    background-image: url(./images/custom\ –\ 1.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 
-.top img {
-    position: relative;
-    max-width: inherit;
-    max-height: inherit;
-}
-
-.mid {
-    background-color: rgb(81, 149, 238);
-    width: 49%;
-    padding: 60px;
-    padding-top: 50px;
-    margin-top: 5px;
-}
-
-.mid-left {
-    background-image: linear-gradient(to right bottom, #060847, #121c5e, #1d2f75, #27438d, #3158a5, #2d6eb7, #3085c8, #3b9bd6, #57b5dd, #7ecee3, #a8e6eb, #d4fcf8);
-}
-
-.mid-right {
-    background-image: url(./images/startup-bg.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 
 .btn {
     background: transparent;
@@ -90,7 +32,7 @@ body {
     border-radius: 25px;
     color: white;
     padding: 10px 30px 10px 30px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     font-size: 18px;
 }
 
@@ -99,53 +41,14 @@ body {
     color: darkblue;
 }
 
-.bottom {
-    width: 100%;
-    padding: 60px;
-    padding-top: 50px;
-    margin-bottom: 0;
-    background-image: url(./images/custom\ -\ 2.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.p {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 18px
 }
 
-.bottom img {
-    height: 25px;
-    margin-top: -5px;
-}
-
-.bottom-message {
-    text-align: center;
-    padding: 50px 0px;
-    margin: 0px 100px;
-    font-size: 20px;
-    color: rgba(255, 255, 255, 0.7);
-}
-
-.footer {
-    margin-left: 13vw;
-    margin-right: 13vw;
-    border-top: 1px solid grey;
-    padding: 50px 0;
-}
-
-.footer ul {
-    float: right;
-    display: flex;
-    font-family: "Neuzit Heavy", sans-serif;
-}
-
-.footer ul li {
-    text-decoration: none;
-}
-
-.footer a {
+.footer-end a {
+    font-size: 18px;
     text-decoration: none;
     padding: 10px;
     color: white;
-}
-
-.footer a :hover {
-    text-decoration: none;
 }
